--- a/homework16/index.html
+++ b/homework16/index.html
@@ -12,8 +12,8 @@
         <!-- py-3 -->
         <header class="container">
             <div class="row justify-content-between">
-                <div class="">
-                    <img src="icons/Shape.png" alt="it`s logo" width="35" height="35">
+                <div class="header-logo">
+                    <img src="icons/Shape.png" alt="it`s logo" width="50" height="50">
                 </div>
                 <nav class="nav nav-pills nav-justified">
                     <!-- px-3 py-2 my-2 -->
