chng names of modules.scss and end PP in header

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -15,7 +15,7 @@
                 <div class="header-logo">
                     <img src="icons/Shape.png" alt="it`s logo" width="50" height="50">
                 </div>
-                <nav class="nav nav-pills nav-justified">
+                <nav class="nav nav-pills nav-justified align-items-center header-menu">
                     <!-- px-3 py-2 my-2 -->
                     <a class="nav-link" href="#">HOME</a>
                     <!-- px-3 py-2 my-2 -->
