--- a/homework16/index.html
+++ b/homework16/index.html
@@ -16,64 +16,46 @@
                     <img src="icons/Shape.png" alt="it`s logo" width="50" height="50">
                 </div>
                 <nav class="nav nav-pills nav-justified align-items-center header-menu">
-                    <!-- px-3 py-2 my-2 -->
                     <a class="nav-link" href="#">HOME</a>
-                    <!-- px-3 py-2 my-2 -->
                     <a class="nav-link" href="#">SERVICE</a>
-                    <!-- px-3 py-2 my-2 -->
                     <a class="nav-link" href="#">ABOUT US</a>
-                    <!-- px-3 py-2 my-2 -->
                     <a class="nav-link" href="#">PRICING TABLE</a>
-                    <!-- px-3 py-2 my-2 -->
                     <a class="nav-link" href="#">HOW IT WORK</a>
-                    <!-- px-3 py-2 my-2 -->
                     <a class="nav-link" href="#">HAPPY CLIENTS</a>
-                    <!-- px-3 py-2 my-2 -->
                     <a class="nav-link" href="#">CONTACT US</a>
                 </nav>
             </div>
         </header>
     </div>
     <div class="container-fluid feedback">
-        <!-- pt-5 -->
         <main class="container">
-            <!-- pt-5 -->
-            <div class="text-center text-white">
-                <!-- mb-0 -->
+            <div class="text-center text-white main-top">
                 <h1 class="">BOOST UP YOUR LOCAL BUSINESS</h1>
-                <!-- mb-4 -->
                 <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
             </div>
-            <form class="row form-inline justify-content-around">
-                <!-- px-2 -->
-                <div class="col-lg-3 bg-white">
+            <form class="row form-inline main-contact">
+                <div class="col-lg-3 bg-white contact-top">
                     <label class="sr-only" for="fullname1">Full Name</label>
-                    <div class="input-group align-items-center">
+                    <div class="input-group align-items-center top-items">
                         <img src="icons/human.png" alt="" width="12px" height="12px">
-                        <!-- py-1 -->
                         <input type="text" class="form-control border-0" id="fullname1" placeholder="Full Name">
                     </div>
                 </div>
-                <!-- px-2  -->
-                <div class="col-lg-3 bg-white">
+                <div class="col-lg-3 bg-white contact-top">
                     <label class="sr-only" for="email1">Email Address</label>
-                    <div class="input-group align-items-center">
+                    <div class="input-group align-items-center top-items">
                         <img src="icons/mail.png" alt="" width="12px" height="12px">
-                        <!-- py-1 -->
                         <input type="email" class="form-control border-0" id="email1" placeholder="Email Addres">
                     </div>
                 </div>
-                <!-- px-2 -->
-                <div class="col-lg-3 bg-white">
+                <div class="col-lg-3 bg-white contact-top">
                     <label class="sr-only" for="tel1">Phone Number</label>
-                    <div class="input-group align-items-center">
+                    <div class="input-group align-items-center top-items">
                         <img src="icons/phone.png" alt="" width="12px" height="12px">
-                        <!-- py-1 -->
                         <input type="tel" class="form-control border-0" id="tel1" placeholder="Phone Number">
                     </div>
                 </div>
-                <!-- px-4 -->
-                <button class="btn btn-primary col-lg-auto" type="submit">REQUEST A QUOTE</button>
+                <button class="btn btn-primary" type="submit">REQUEST A QUOTE</button>
             </form>
             <div class="d-flex justify-content-center banner">
                 <div id="feedback-slider" class="carousel slide" data-ride="carousel">
@@ -84,13 +66,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="icons/Laptop.png" width="457px" alt="First slide">
+                            <img class="d-block img-fluid" src="icons/Laptop.png" width="645" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="icons/Laptop.png" width="457" alt="Second slide">
+                            <img class="d-block img-fluid" src="icons/Laptop.png" width="645" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="icons/Laptop.png" width="457px" alt="Third slide">
+                            <img class="d-block img-fluid" src="icons/Laptop.png" width="645" alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#feedback-slider" role="button" data-slide="prev">
