did PP at services

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -87,45 +87,35 @@
             </div>
         </main>
     </div>    
-    <!-- p-5 -->
     <div class="container-fluid services">
-        <!-- pt-5 mt-5  -->
         <article class="container">
-            <!-- pb-5 -->
             <div class="text-center">
-                <!-- mb-0 -->
                 <h2 class="text-uppercase">Our Services</h2>
-                <p class="">Lorem Ipsum is simply dummy Business industry.</p>
+                <p class="subtitle">Lorem Ipsum is simply dummy Business industry.</p>
             </div>    
-            <div class="row">
+            <div class="row services-main">
                 <div class="col-lg-6">
-                    <!-- py-3 h-33 -->
-                    <div class="row">
-                        <div class="col-2"><img src="icons/clock.png" alt=""></div>
-                        <!-- pr-1 -->
-                        <div class="col-9">
+                    <div class="row services-clock">
+                        <div class="col-auto clock-img"><img src="icons/clock.png" alt=""></div>
+                        <div class="col-10">
                             <h3 class="text-uppercase">Font-Awesome Icons</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
                                 ustry. Lorem Ipsum has been the industry's standard dummy text ever 
                                 since the 1500s, when an unknown printer.</p>
                         </div>
                     </div>
-                    <!-- py-3 h-33 -->
-                    <div class="row">
-                        <div class="col-2"><img src="icons/studi.png" alt=""></div>
-                        <!-- pr-1 -->
-                        <div class="col-9">
+                    <div class="row services-studi">
+                        <div class="col-auto studi-img"><img src="icons/studi.png" alt=""></div>
+                        <div class="col-10">
                             <h3 class="text-uppercase">Working Contact form</h3>
                             <p>Many desktop publishing packages and web page editors now use Lorem 
                                 Ipsum as their default model text, and a search for 'lorem ipsum' will un
                                 cover many web sites still in their infancy</p>
                         </div>
                     </div>
-                    <!-- py-3 h-33 -->
-                    <div class="row">
-                        <div class="col-2"><img src="icons/friendly_code.png" alt=""></div>
-                        <!-- pr-1 -->
-                        <div class="col-9">
+                    <div class="row services-code">
+                        <div class="col-auto code-img"><img src="icons/friendly_code.png" alt=""></div>
+                        <div class="col-10">
                             <h3 class="text-uppercase">Friendly Code</h3>
                             <p>Finibus Bonorum et Malorum" by Cicero are also reproduced in their 
                                 exact original form, accompanied by English versions from the 
@@ -134,36 +124,28 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <!-- py-3 h-33 -->
-                    <div class="row">
-                        <div class="col-2"><img src="icons/respons.png" alt=""></div>
-                        <!-- pr-1 -->
-                        <div class="col-9">
+                    <div class="row services-respons">
+                        <div class="col-auto respons-img"><img src="icons/respons.png" alt=""></div>
+                        <div class="col-10">
                             <h3 class="text-uppercase">Fully Responsive Design</h3>
                             <p>Many desktop publishing packages and web page editors now use Lorem 
                                 Ipsum as their default model text, and a search for 'lorem ipsum' will uncover
                                 many web sites still in their infancy</p>
                         </div>
                     </div>
-                    <!-- py-3 h-33 -->
-                    <div class="row">
-                        <div class="col-2"><img src="icons/rocket.png" alt=""></div>
-                        <!-- pr-1 -->
-                        <div class="col-9">
+                    <div class="row services-rocket">
+                        <div class="col-auto rocket-img"><img src="icons/rocket.png" alt=""></div>
+                        <div class="col-10">
                             <h3 class="text-uppercase">Retina Ready icons here</h3>
                             <p>There are many variations of passages of Lorem Ipsum available, but the 
                                 majority have suffered alteration in some form, by injected humour
                                 or randomised words which don't look even slightly believable.</p>
                         </div>
                     </div>
-                    <!-- py-3 h-33 -->
-                    <div class="row">
-                         <!-- pr-0 -->
-                        <div class="col-2">
-                            <!-- ml-2 -->
-                            <img class="" src="icons/dollar.png" alt=""></div>
-                         <!-- pr-1 -->
-                        <div class="col-9">
+                    <div class="row services-dollar">
+                        <div class="col-auto dollar-img">
+                           <img class="" src="icons/dollar.png" alt=""></div>
+                        <div class="col-10">
                             <h3 class="text-uppercase">Flat trendy landing page Design</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                 Lorem Ipsum has been the industry's standard dummy text ever since 
@@ -204,7 +186,7 @@
         <section class="container text-center">
             <h2 class="col-12">CHOOS YOUR PRICE</h2>
             <!-- m-0 pb-5 -->
-            <p class="col-12">Lorem Ipsum is simply dummy text of the printing typesetting .</p>
+            <p class="col-12 subtitle">Lorem Ipsum is simply dummy text of the printing typesetting .</p>
             <!-- my-4 py-4 -->
             <div class="row justify-content-between">
                 <div class="col-4 bg-white">
@@ -259,7 +241,7 @@
         <!-- py-5 -->
         <section class="container text-center">
             <h2 class="">HOW IT WORKS</h2>
-            <p class="">Lorem Inspum is simply dummy Business industry</p>
+            <p class="subtitle">Lorem Inspum is simply dummy Business industry</p>
             <!-- my-4 pb-4 -->
             <div class="row justify-content-between process-visual">
                 <!-- px-0 mt-4 -->
@@ -319,7 +301,7 @@
                 <!-- pt-4 -->
                 <h2 class="text-center">HAPPY CLIENTS</h2>
                 <!-- mt-0 pt-0 -->
-                <p class="text-center text-white">We are explain who is using our business solutions</p>
+                <p class="text-center text-white subtitle">We are explain who is using our business solutions</p>
             </div>
             <div class="row justify-content-around align-content-around">
                 <!-- px-4 py-3 -->
@@ -402,7 +384,7 @@
             <div class="text-center">
                 <!-- m-0 -->
                 <h2 class="">NEWSLETTER</h2>
-                <p>Lorem Ipsum is simply dummy Business industry</p>
+                <p class="subtitle">Lorem Ipsum is simply dummy Business industry</p>
             </div>
             <form class="form-inline justify-content-center">
                 <!-- px-2 -->
