did PP at module-about_us.scss

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -156,16 +156,13 @@
             </div>
         </article>
     </div>
-    <!-- m-0 -->
     <div class="aboutus">
         <div class="row no-gutters">
             <div class="col-md-6">
-                <img class="" src="img/bckrnd_table.jpg" width="100%" height="100%" alt=""></div>
+                <img class="" src="img/bckrnd_table.jpg" width="850" height="625" alt=""></div>
             <div class="col-md-6">
                 <div class="aboutus-article">
-                    <!-- px-0 -->
                     <h2 class="col-9">ABOUT US</h2>
-                    <!-- p-0 py-3 -->
                     <p class="col-9">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
                         Ipsum has been the industry's standard dummy text ever since the 1500s, when an 
                         unknown printer took a galley of type and scrambled it to make a type specimen 
@@ -174,8 +171,7 @@
                         with desktop publishing software like Aldus PageMaker including versions of Lorem 
                         Ipsum
                     </p>
-                    <!-- px-3 -->
-                    <button type="button" class="col-auto btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">READ MORE</button>            
+                    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">READ MORE</button>            
                 </div>
             </div>    
         </div>
@@ -406,7 +402,7 @@
                     </div>
                 </div>
                 <!-- px-5 -->
-                <button type="submit" class="col-auto btn btn-primary">SUBSCRIBE NOW</button>
+                <button type="submit" class="btn btn-primary">SUBSCRIBE NOW</button>
             </form>
             <!-- py-5 my-3 -->
             <div class="row flex-column address">
