--- a/homework16/index.html
+++ b/homework16/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="container-fluid">
-        <!-- py-3 -->
         <header class="container">
             <div class="row justify-content-between">
                 <div class="header-logo">
@@ -158,9 +157,9 @@
     </div>
     <div class="aboutus">
         <div class="row no-gutters">
-            <div class="col-md-6">
-                <img class="" src="img/bckrnd_table.jpg" width="850" height="625" alt=""></div>
-            <div class="col-md-6">
+            <div class="col-6">
+                <img src="img/bckrnd_table.jpg" width="100%" height="100%" alt=""></div>
+            <div class="col-6">
                 <div class="aboutus-article">
                     <h2 class="col-9">ABOUT US</h2>
                     <p class="col-9">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
@@ -176,58 +175,37 @@
             </div>    
         </div>
     </div>
-    <!-- py-5 -->
     <div class="container-fluid price">    
-        <!-- py-5 -->
         <section class="container text-center">
             <h2 class="col-12">CHOOS YOUR PRICE</h2>
-            <!-- m-0 pb-5 -->
             <p class="col-12 subtitle">Lorem Ipsum is simply dummy text of the printing typesetting .</p>
-            <!-- my-4 py-4 -->
-            <div class="row justify-content-between">
-                <div class="col-4 bg-white">
+            <div class="row price-plans">
+                <div class="col-4 bg-white price-first">
                     <h3>BASIC PLAN</h3>
-                    <!-- p-0 m-0 -->
                     <p class="price-outside price-dollar">$<span class="price-cost">22</span></p>
-                    <p>PER MONTH</p>
-                    <!-- m-0 py-1 -->
+                    <p class="end-toppart">PER MONTH</p>
                     <p class="price-items">1 ACCOUNT</p>
-                    <!-- m-0 py-1 -->
                     <p class="price-items">8 HOUR SUPPORT</p>
-                    <!-- m-0 py-1 -->
                     <p class="price-items">CUSTOM CLOUD SERVICES</p>
-                    <!-- my-3 -->
-                    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
+                    <button type="button" class="btn btn-primary price-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
                 </div>
-                <!-- py-5  -->
-                <div class="col-4price-middle">
+                <div class="col-4 price-middle">
                     <h3 class="text-white">PREMIUM PLAN</h3>
-                    <!-- p-0 m-0 -->
                     <p class="price-dollar">$<span class="price-cost">42</span></p>
-                    <p>PER MONTH</p>
-                    <!-- m-0 py-1 -->
-                    <p class="price-items">8 ACCOUNT</p>
-                    <!-- m-0 py-1 -->
-                    <p class="price-items">24 HOUR SUPPORT</p>
-                    <!-- m-0 py-1 -->
-                    <p class="price-items">CUSTOM CLOUD SERVICES</p>
-                    <!-- my-3 -->
-                    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
-                </div>
-                <!-- my-4 py-4 -->
-                <div class="col-4 bg-white">
-                    <h3>GOLD PLAN</h3>
-                    <!-- p-0 m-0 -->
-                    <p class="price-outside price-dollar">$<span class="price-cost">62</span></p>
-                    <p>PER MONTH</p>
-                    <!-- m-0 py-1 -->
+                    <p class="end-toppart">PER MONTH</p>
                     <p class="price-items">2 ACCOUNT</p>
-                    <!-- m-0 py-1 -->
                     <p class="price-items">100MB STORAGE</p>
-                    <!-- m-0 py-1 -->
                     <p class="price-items">CUSTOM CLOUD SERVICES</p>
-                    <!-- my-3 -->
-                    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
+                    <button type="button" class="btn btn-primary price-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
+                </div>
+                <div class="col-4 bg-white price-thrd">
+                    <h3>GOLD PLAN</h3>
+                    <p class="price-outside price-dollar">$<span class="price-cost">62</span></p>
+                    <p class="end-toppart">PER MONTH</p>
+                    <p class="price-items">8 ACCOUNT</p>
+                    <p class="price-items">24 HOUR SUPPORT</p>
+                    <p class="price-items">CUSTOM CLOUD SERVICES</p>
+                    <button type="button" class="btn btn-primary price-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED</button>            
                 </div>
             </div>
         </section>
