did PP at module_process.scss

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -210,61 +210,46 @@
             </div>
         </section>
     </div>       
-    <!-- py-5 -->
     <div class="container-fluid process">
-        <!-- py-5 -->
         <section class="container text-center">
-            <h2 class="">HOW IT WORKS</h2>
+            <h2>HOW IT WORKS</h2>
             <p class="subtitle">Lorem Inspum is simply dummy Business industry</p>
-            <!-- my-4 pb-4 -->
             <div class="row justify-content-between process-visual">
-                <!-- px-0 mt-4 -->
-                <img class="img-fluid col-1 process-items" src="icons/headphone.png" width="72px" height="60px" alt="">
-                <!-- px-0 -->
-                <img class="img-fluid col-1 process-items-arrow" src="icons/Arrow.png" width="128px" height="32px" alt="">
-                 <!-- px-0 mt-4 -->
-                <img class="img-fluid col-1 process-items" src="icons/lock.png" width="72px" height="60px" alt="">
-                 <!-- px-0 -->
-                <img class="img-fluid col-1 process-items-arrow arrow-bot-rev" src="icons/Arrow_reverse.png" width="128px" height="32px" alt="">
-                 <!-- px-0 mt-4 -->
-                <img class="img-fluid col-1 process-items" src="icons/cloud.png" width="72px" height="60px" alt="">
-                 <!-- px-0 -->
-                <img class="img-fluid col-1 process-items-arrow" src="icons/Arrow.png" width="128px" height="32px" alt="">
-                 <!-- px-0 mt-4 -->
-                <img class="img-fluid col-1 process-items" src="icons/thumbs_up.png" width="72px" height="60px" alt="">
+                <img class="img-fluid process-items" src="icons/headphone.png" width="72px" height="60px" alt="">
+                <img class="img-fluid process-items-arrow arrow-top" src="icons/Arrow.png" width="128px" height="32px" alt="">
+                <img class="img-fluid process-items" src="icons/lock.png" width="52px" height="60px" alt="">
+                <img class="img-fluid process-items-arrow arrow-bot-rev" src="icons/Arrow_reverse.png" width="128px" height="32px" alt="">
+                <img class="img-fluid process-items" src="icons/cloud.png" width="82px" height="60px" alt="">
+                <img class="img-fluid process-items-arrow arrow-top" src="icons/Arrow.png" width="128px" height="32px" alt="">
+                <img class="img-fluid process-items" src="icons/thumbs_up.png" width="72px" height="60px" alt="">
             </div>
-            <div class="d-flex justify-content-between">
-                <div>
+            <div class="row justify-content-between">
+                <div class="col-auto process-steps">
                     <h3>STEP 1</h3>
-                    <!-- mx-3 -->
-                    <p class="">Lorem Ipsum is simply dummy text 
+                    <p>Lorem Ipsum is simply dummy text 
                         of the printing and typesetting ind
                         ustry. Lorem Ipsum has been</p>
                 </div>
-                <div>
+                <div class="col-auto process-steps">
                     <h3>STEP 2</h3>
-                    <!-- mx-3 -->
-                    <p class="">Lorem Ipsum is simply dummy text 
+                    <p>Lorem Ipsum is simply dummy text 
                         of the printing and typesetting ind
                         ustry. Lorem Ipsum has been</p>
                 </div>
-                <div>
+                <div class="col-auto process-steps">
                     <h3>STEP 3</h3>
-                    <!-- mx-3 -->
-                    <p class="">Lorem Ipsum is simply dummy text 
+                    <p>Lorem Ipsum is simply dummy text 
                         of the printing and typesetting ind
                         ustry. Lorem Ipsum has been</p>
                 </div>
-                <div>
+                <div class="col-auto process-steps">
                     <h3>STEP 4</h3>
-                    <!-- mx-3 -->
-                    <p class="">Lorem Ipsum is simply dummy text 
+                    <p>Lorem Ipsum is simply dummy text 
                         of the printing and typesetting ind
                         ustry. Lorem Ipsum has been</p>
                 </div>
             </div>
-            <!-- mt-5 -->
-            <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED NOW</button>            
+            <button type="button" class="btn btn-primary process-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED NOW</button>            
         </section>
     </div>
     <!-- py-5 -->
