--- a/homework16/index.html
+++ b/homework16/index.html
@@ -252,84 +252,66 @@
             <button type="button" class="btn btn-primary process-button" data-toggle="button" aria-pressed="false" autocomplete="off">GET STARTED NOW</button>            
         </section>
     </div>
-    <!-- py-5 -->
     <div class="container-fluid cards">
         <aside class="container">
-            <!-- py-4 -->
             <div class="text-center text-white">
-                <!-- pt-4 -->
                 <h2 class="text-center">HAPPY CLIENTS</h2>
-                <!-- mt-0 pt-0 -->
                 <p class="text-center text-white subtitle">We are explain who is using our business solutions</p>
             </div>
-            <div class="row justify-content-around align-content-around">
-                <!-- px-4 py-3 -->
+            <div class="row justify-content-around align-content-around cards-items">
                 <div class="col-6 justify-content-between">
-                    <!-- py-5 -->
-                    <div class="row bg-white">
-                        <img class="col-4 rounded-circle cards-photo" src="img/ava_top_left.jpg" width="50px" height="50px" alt="">
-                        <div class="col-8">
-                            <blockquote class="cards-mesage"> 
-                                <!-- pr-3 -->
-                                <p class="">Lorem Ipsum is simply dummy text of the printing and 
-                                    typesetting industry. Lorem Ipsum has industrystandard 
-                                    text ever since the 1500s, wen an 
-                                    unknown printer took a galley of type and scrambled 
-                                    to make a type specimen book.</p>
-                            </blockquote>
+                    <div class="row bg-white cards-items-left">
+                        <div class="col-4 m-0 p-0">
+                            <img class="rounded-circle cards-photo" src="img/ava_top_left.jpg" width="120px" height="120px" alt="">
+                        </div>
+                        <div class="col-8 m-0 p-0">
+                            <p class="cards-mesage">Lorem Ipsum is simply dummy text of the printing and 
+                                typesetting industry. Lorem Ipsum has been the industry standard dummy 
+                                text ever since the 1500s, when an unknown printer took a galley of type 
+                                and scrambled it to make.</p>
                             <p class="text-uppercase"><span class="cards-name">Darwin Michle,</span> Project manager</p>
                         </div>
                     </div>
                 </div>
-                <!-- px-4 py-3 -->
                 <div class="col-6 justify-content-between">
-                    <!-- py-5 -->
-                    <div class="row bg-white">
-                        <img class="col-4 rounded-circle cards-photo" src="img/ava_top_right.jpg" width="50px" height="50px" alt="">
-                        <div class="col-8">
-                            <blockquote class="cards-mesage"> 
-                                <!-- pr-3 -->
-                                <p class="">Lorem Ipsum is simply dummy text of the printing and 
-                                    typesetting industry. Lorem Ipsum has industrystandard 
-                                    text ever since the 1500s, wen an 
-                                    unknown printer took a galley of type and scrambled 
-                                    to make a type specimen book.</p>
-                            </blockquote>
+                    <div class="row bg-white cards-items-right">
+                        <div class="col-4 m-0 p-0">
+                            <img class="rounded-circle cards-photo" src="img/ava_top_right.jpg" width="120px" height="120px" alt="">
+                        </div>
+                        <div class="col-8 m-0 p-0">
+                            <p class="cards-mesage">Lorem Ipsum is simply dummy text of the printing and 
+                                typesetting industry. Lorem Ipsum has been the industrystandard dummy text 
+                                ever since the 1500s, wen an unknown printer took a galley of type and scrambled 
+                                to make a type specimen book.</p>
                             <p class="text-uppercase"><span class="cards-name">Madam Elisabath,</span> Creative Director</p>
                         </div>
                     </div>
                 </div>
-                <!-- px-4 py-3 -->
                 <div class="col-6 justify-content-between">
-                    <!-- py-5 -->
-                    <div class="row bg-white">
-                        <img class="col-4 rounded-circle cards-photo" src="img/ava_bot_left.jpg" width="50px" height="50px" alt="">
-                        <div class="col-8">
-                            <blockquote class="cards-mesage"> 
-                                <p class="pr-3">Lorem Ipsum is simply dummy text of the printing and 
-                                    typesetting industry. Lorem Ipsum has industrystandard 
-                                    text ever since the 1500s, wen an 
-                                    unknown printer took a galley of type and scrambled 
-                                    to make a type specimen book.</p>
-                            </blockquote>
+                    <div class="row bg-white cards-items-left">
+                        <div class="col-4 m-0 p-0">
+                            <img class="rounded-circle cards-photo" src="img/ava_bot_left.jpg" width="120px" height="120px" alt="">
+                        </div>
+                        <div class="col-8 m-0 p-0">
+                            <p class="cards-mesage">Lorem Ipsum is simply dummy text of the printing and 
+                                typesetting industry. Lorem Ipsum has been the industry standard dummy text 
+                                ever since the 1500s, when an unknown printer took a galley of type and scrambled
+                                it to make.</p>
                             <p class="text-uppercase"><span class="cards-name">Clips arter,</span> Lipsum directer</p>
                         </div>
                     </div>
                 </div>
-                <!-- px-4 py-3 -->
                 <div class="col-6 justify-content-between">
-                    <!-- py-5 -->
-                    <div class="row bg-white">
-                        <img class="col-4 rounded-circle cards-photo" src="img/ava_bot_right.jpg" width="50px" height="50px" alt="">
-                        <div class="col-8">
-                            <blockquote class="cards-mesage"> 
-                                <!-- pr-3 -->
-                                <p class="">Lorem Ipsum is simply dummy text of the printing and 
-                                    typesetting industry. Lorem Ipsum has industrystandard 
-                                    text ever since the 1500s, wen an 
-                                    unknown printer took a galley of type and scrambled 
-                                    to make a type specimen book.</p>
-                            </blockquote>
+                    <div class="row bg-white cards-items-right">
+                        <div class="col-4 m-0 p-0">
+                            <img class="rounded-circle cards-photo" src="img/ava_bot_right.jpg" width="120px" height="120px" alt="">
+                        </div>
+                        <div class="col-8 m-0 p-0">
+                            <p class="cards-mesage">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                Lorem Ipsum has been the industrystandard dummy text ever since the 1500s, wen 
+                                an unknown printer took a galley of type and scrambled to make a type specimen 
+                                book.</p>
                             <p class="text-uppercase"><span class="cards-name">zam cristafr,</span> manager</p>
                         </div>
                     </div>
