did PP at address without footer

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -319,57 +319,42 @@
             </div>                       
         </aside>
     </div>
-    <!-- py-5 -->
     <div class="container-fluid contacts">
         <section class="container">
             <div class="text-center">
-                <!-- m-0 -->
                 <h2 class="">NEWSLETTER</h2>
                 <p class="subtitle">Lorem Ipsum is simply dummy Business industry</p>
             </div>
-            <form class="form-inline justify-content-center">
-                <!-- px-2 -->
-                <div class="col-3 contacts-items">
+            <form class="form-inline justify-content-between contacts-subscribe">
+                <div class="col-auto contacts-items contacts-items-name">
                     <label class="sr-only" for="fullname2">Name</label>
                     <div class="input-group align-items-center">
                         <img src="icons/human.png" alt="" width="12px" height="12px">
-                        <!-- py-1 -->
                         <input type="text" class="form-control border-0" id="fullname2" placeholder="Name">
                     </div>
                 </div>
-                <!-- px-2 mx-2 -->
-                <div class="col-4 contacts-items">
+                <div class="col-auto contacts-items contacts-items-mail">
                     <label class="sr-only" for="email2">Email Address</label>
                     <div class="input-group align-items-center">
-                        <img src="icons/mail.png" alt="" width="12px" height="12px">
-                        <!-- py-1 -->
+                        <img src="icons/mail.png" alt="" width="15px" height="12px">
                         <input type="email" class="form-control border-0" id="email2" placeholder="Email Addres">
                     </div>
                 </div>
-                <!-- px-5 -->
-                <button type="submit" class="btn btn-primary">SUBSCRIBE NOW</button>
+                <button type="submit" class="btn btn-primary contacts-button">SUBSCRIBE NOW</button>
             </form>
-            <!-- py-5 my-3 -->
             <div class="row flex-column address">
                 <div class="rounded-circle text-center align-self-center address-items">
-                    <!-- pt-5 mb-1  -->
                     <h3 class="text-white">ADDRESS</h3>
-                    <!-- pt-1 m-0 -->
                     <p class="">Business street</p>
-                    <!-- pt-1 m-0 -->
                     <p class="">Second north section</p>
-                    <!-- pt-1 m-0 -->
                     <p class="">Bavani nagar. 88769</p>
-                    <!-- pt-1 m-0 -->
                     <p class="">Call : +987-9976-999</p>
-                    <!-- pt-1 m-0 -->
                     <p class="">info@businessface.com</p>
                 </div>
-                <div class="align-self-center triangle-down"></div>
-                <img class="col-auto align-self-center" src="icons/Shape_mini.png" alt="">
+                <div class="align-self-center address-triangle"></div>
+                <img class="col-auto align-self-center address-logo" src="icons/Shape_mini.png" alt="">
             </div>
-            <!-- pt-5 -->
-            <div class="d-flex nav-bot">
+            <div class="d-flex nav-bot justify-content-center">
                 <nav class="nav nav-pills nav-justified">
                     <a class="nav-link" href="#">HOME</a>
                     <a class="nav-link" href="#">SERVICE</a>
@@ -380,23 +365,17 @@
                     <a class="nav-link" href="#">CONTACT US</a>
                 </nav>
             </div>
-            <!-- py-3 -->
-            <div class="row justify-content-center">
-                <!-- p-0 my-2 -->
-                <img class="col-auto" src="icons/phone.png" alt="" width="18px" height="18px">
-                <!-- p-0 m-0 pl-1 -->
-                <p class="col-auto phone">+987 9976 999</p>
+            <div class="row justify-content-center contacts-phone">
+                <img class="col-auto phone-img" src="icons/phone.png" alt="" width="18px" height="18px">
+                <p class="col-auto phone-number">+987 9976 999</p>
             </div>
-            <!-- pb-4 -->
-            <div class="d-flex justify-content-center">
-                <!-- m-2 -->
-                <img class="" src="icons/twitter.png" alt="">
-                <!-- m-2 -->
-                <img class="" src="icons/fb.png" alt="">
-                <!-- m-2 -->
-                <img class="" src="icons/google_plus.png" alt="">
-                <!-- m-2 -->
-                <img class="" src="icons/linked.png" alt="">
+            <div class="d-flex justify-content-center contacts-logo">
+                <!-- <div class="col-auto"> -->
+                    <img class="contacts-logo-items" src="icons/twitter.png" alt="">
+                    <img class="contacts-logo-items" src="icons/fb.png" alt="">
+                    <img class="contacts-logo-items" src="icons/google_plus.png" alt="">
+                    <img class="contacts-logo-items" src="icons/linked.png" alt="">
+                <!-- </div> -->
             </div>
         </section>
     </div>
