split main.scss for mine styles and bootstrap-modif... and chng file system for split

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>bootstrap&scss</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -352,7 +353,7 @@
                     <p class="">info@businessface.com</p>
                 </div>
                 <div class="align-self-center address-triangle"></div>
-                <img class="col-auto align-self-center address-logo" src="icons/Shape_mini.png" alt="">
+                <img class="col-auto align-self-center address-logo" src="icons/shape.png" alt="">
             </div>
             <div class="d-flex nav-bot justify-content-center">
                 <nav class="nav nav-pills nav-justified">
@@ -379,7 +380,6 @@
             </div>
         </section>
     </div>
-    <!-- py-3 -->
     <div class="container-fluid footer">
         <footer class="container text-center">
             <p class="text-white m-0">All contents © copyright 2014 Business Theme. All rights reserved Designed by : akhilwebfolio</p>
