delited all empty classes

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -30,8 +30,8 @@
     <div class="container-fluid feedback">
         <main class="container">
             <div class="text-center text-white main-top">
-                <h1 class="">BOOST UP YOUR LOCAL BUSINESS</h1>
-                <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
+                <h1>BOOST UP YOUR LOCAL BUSINESS</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum typesetting</p>
             </div>
             <form class="row form-inline main-contact">
                 <div class="col-lg-3 bg-white contact-top">
@@ -144,7 +144,7 @@
                     </div>
                     <div class="row services-dollar">
                         <div class="col-auto dollar-img">
-                           <img class="" src="icons/dollar.png" alt=""></div>
+                           <img src="icons/dollar.png" alt=""></div>
                         <div class="col-10">
                             <h3 class="text-uppercase">Flat trendy landing page Design</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -323,7 +323,7 @@
     <div class="container-fluid contacts">
         <section class="container">
             <div class="text-center">
-                <h2 class="">NEWSLETTER</h2>
+                <h2>NEWSLETTER</h2>
                 <p class="subtitle">Lorem Ipsum is simply dummy Business industry</p>
             </div>
             <form class="form-inline justify-content-between contacts-subscribe">
@@ -346,11 +346,11 @@
             <div class="row flex-column address">
                 <div class="rounded-circle text-center align-self-center address-items">
                     <h3 class="text-white">ADDRESS</h3>
-                    <p class="">Business street</p>
-                    <p class="">Second north section</p>
-                    <p class="">Bavani nagar. 88769</p>
-                    <p class="">Call : +987-9976-999</p>
-                    <p class="">info@businessface.com</p>
+                    <p>Business street</p>
+                    <p>Second north section</p>
+                    <p>Bavani nagar. 88769</p>
+                    <p>Call : +987-9976-999</p>
+                    <p>info@businessface.com</p>
                 </div>
                 <div class="align-self-center address-triangle"></div>
                 <img class="col-auto align-self-center address-logo" src="icons/shape.png" alt="">
