add sans serif at all fonts and fixed PP at head and main modules

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -171,7 +171,7 @@
                         with desktop publishing software like Aldus PageMaker including versions of Lorem 
                         Ipsum
                     </p>
-                    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">READ MORE</button>            
+                    <button type="button" class="btn btn-primary aboutus-button" data-toggle="button" aria-pressed="false" autocomplete="off">READ MORE</button>            
                 </div>
             </div>    
         </div>
